<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Switch_menu_largetext"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Switch_menu_mediumtext"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start_Fragment_Second_button"
        android:id="@+id/grab_button"
        android:background="#78e056"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="3dp"
        android:onClick="switchToCar"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start_Fragment_First_button"
        android:id="@+id/cam_button"
        android:background="#d3b64e"
        android:layout_alignTop="@+id/grab_button"
        android:layout_toStartOf="@+id/textView"
        android:padding="3dp"
        android:onClick="switchToCar"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start_Fragment_Third_button"
        android:id="@+id/big_button"
        android:background="#44a1ed"
        android:layout_alignTop="@+id/grab_button"
        android:layout_toEndOf="@+id/textView"
        android:padding="3dp"
        android:onClick="switchToCar"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CANCEL"
        android:id="@+id/cancel_button"
        android:layout_below="@+id/grab_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="#f92f2f"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:onClick="goBack"/>

</RelativeLayout>