<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backround3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Start_Fragment_LargeText"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Start_Fragment_MediumText"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_Cam"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/textView"
            android:text="@string/Start_Fragment_First_button"
            android:checked="false"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start_Fragment_Second_button"
            android:id="@+id/radioButton_grab"
            android:layout_below="@+id/radioButton_Cam"
            android:layout_alignStart="@+id/radioButton_Cam"
            android:checked="false"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start_Fragment_Third_button"
            android:id="@+id/radioButton_big"
            android:layout_below="@+id/radioButton_grab"
            android:layout_alignStart="@+id/radioButton_grab"
            android:checked="false"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:id="@+id/start_button"
        android:layout_below="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_marginTop="29dp"
        android:background="#35cc3a"
        android:clickable="true"
        android:onClick="switchToCar"/>

</RelativeLayout>